<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2013 Redwood Systems Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<resources>

    <string name="hello">Hello World, SceneControl4TestActivity!</string>
    <string name="app_name">Redwood</string>
    <string name="logo_text">Redwood Systems</string>
    <string name="refresh">Refresh</string>
    <string name="location">Location</string>
    <string name="activateScenes">Activate Scenes</string>
    <string name="apply">Apply</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="settings_hdr">Contact your facilities manager for help with entering your assigned cluster host and password</string>
    <string name="cluster_name">Cluster Host</string>
    <string name="password">Password</string>
    <string name="delete_msg">Are you sure?</string>
    <string name="delete_title">Delete Location</string>
    <string name="default_cluster_name">sandbox1.redwoodsystems.com</string>
    <string name="default_password">3edw00d</string>
    <string name="selected">selected</string>
</resources>